; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ts/extr_ts_rsp_utils.c_TS_ACCURACY_set_micros.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ts/extr_ts_rsp_utils.c_TS_ACCURACY_set_micros.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@TS_F_TS_ACCURACY_SET_MICROS = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TS_ACCURACY_set_micros(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* null, i32** %6, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = icmp eq i32* %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %34

13:                                               ; preds = %2
  %14 = load i32*, i32** %5, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %26

16:                                               ; preds = %13
  %17 = load i32*, i32** %5, align 8
  %18 = call i32* @ASN1_INTEGER_dup(i32* %17)
  store i32* %18, i32** %6, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = icmp eq i32* %19, null
  br i1 %20, label %21, label %25

21:                                               ; preds = %16
  %22 = load i32, i32* @TS_F_TS_ACCURACY_SET_MICROS, align 4
  %23 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %24 = call i32 @TSerr(i32 %22, i32 %23)
  store i32 0, i32* %3, align 4
  br label %34

25:                                               ; preds = %16
  br label %26

26:                                               ; preds = %25, %13
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = load i32*, i32** %28, align 8
  %30 = call i32 @ASN1_INTEGER_free(i32* %29)
  %31 = load i32*, i32** %6, align 8
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  store i32* %31, i32** %33, align 8
  store i32 1, i32* %3, align 4
  br label %34

34:                                               ; preds = %26, %21, %12
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i32* @ASN1_INTEGER_dup(i32*) #1

declare dso_local i32 @TSerr(i32, i32) #1

declare dso_local i32 @ASN1_INTEGER_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
